# tscc

./: .gitattributes  .gitignore  CHANGELOG.md  Cargo.toml  LICENSE-MIT  README.md  build.rs
examples/hello-world/: README.md  hello.ts  main.rs
helpers/: Cargo.toml  rust-toolchain.toml
helpers/src/: arena.rs  hash.rs  inline.rs  lib.rs  string.rs
src/: classes.rs  error.rs  lib.rs  main.rs  parse.rs  types.rs
src/codegen/: array_builtins.rs  classes.rs  coerce.rs  dwarf.rs  expr.rs  func.rs  generics.rs  hash_builtins.rs  hash_table.rs  iterators.rs  map_builtins.rs  math_builtins.rs  mod.rs  module.rs  precompiled.rs  sections.rs  set_builtins.rs  shapes.rs  splice.rs  stmt.rs  string_builtins.rs  typed_arrays.rs  unions.rs  wasm_types.rs
src/codegen/array_builtins/: mod.rs  predicate.rs  sort.rs  transform.rs
src/codegen/expr/: array.rs  assignment.rs  binary.rs  call.rs  class.rs  closure.rs  hash_table.rs  map.rs  member.rs  mod.rs  object.rs  object_static.rs  set.rs  string.rs  tuple.rs  typed_array.rs  typed_array_hofs.rs  typed_array_methods.rs
src/codegen/expr/array/: construction.rs  immutable.rs  mod.rs  mutation.rs  query.rs
src/codegen/shapes/: fingerprint.rs  mod.rs  tests.rs  walker.rs
src/codegen/string_builtins/: compare.rs  convert.rs  mod.rs  search.rs  split_join.rs  transform.rs
tests/: arrays.rs  classes.rs  closures.rs  control_flow.rs  debug.rs  errors.rs  generics.rs  hashers.rs  inheritance.rs  integration.rs  it.rs  maps.rs  math.rs  objects.rs  sets.rs  splicer.rs  strings.rs  tuples.rs
tests/it/: arrays.rs  classes.rs  closures.rs  coercion.rs  control_flow.rs  debug.rs  errors.rs  generics.rs  hashers.rs  inheritance.rs  iterators.rs  maps.rs  math.rs  objects.rs  sets.rs  splicer.rs  strings.rs  tuples.rs  typed_arrays.rs  unions.rs
tests/it/common/: mod.rs
