[package]
name = "tscc"
version = "0.1.0"
edition = "2024"

[lib]
name = "tscc"
path = "src/lib.rs"

[[bin]]
name = "tscc"
path = "src/main.rs"

[dependencies]
oxc_parser = "0.124"
oxc_allocator = "0.124"
oxc_span = "0.124"
oxc_ast = "0.124"
wasm-encoder = "0.226"

[build-dependencies]
wasmparser = "0.226"

[dev-dependencies]
wasmtime = { version = "31", default-features = false, features = ["cranelift", "runtime"] }
wasmparser = "0.226"
# Reference xxh3 for the string-hash determinism tests. Must match the version
# pinned by `helpers/Cargo.toml` so native reference outputs agree with the
# wasm-side bytes. (FxHash is inlined in both places and needs no reference
# crate — see `fx_round_u64` in `tests/hashers.rs`.)
xxhash-rust = { version = "0.8", features = ["xxh3"] }
